parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_aux main
Rule 2     program -> main
Rule 3     program_aux -> program_aux function
Rule 4     program_aux -> function
Rule 5     function -> function_header function_body
Rule 6     main -> FUNCTION MAIN function_body
Rule 7     function_header -> FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
Rule 8     function_header -> FUNCTION ID L_PARENS R_PARENS COLON function_type
Rule 9     function_body -> L_KEY_BRACKET function_body_aux statements R_KEY_BRACKET
Rule 10    function_body -> L_KEY_BRACKET statements R_KEY_BRACKET
Rule 11    function_body_aux -> var function_body_aux
Rule 12    function_body_aux -> var
Rule 13    statements -> statement statements
Rule 14    statements -> statement
Rule 15    function_params -> type ID array_index COMMA function_params
Rule 16    function_params -> type ID array_index
Rule 17    function_params -> type ID COMMA function_params
Rule 18    function_params -> type ID
Rule 19    function_type -> type
Rule 20    function_type -> VOID
Rule 21    var -> type_aux ID n_var_name array_dim var_aux SEMICOLON
Rule 22    var -> type_aux ID n_var_name array_dim SEMICOLON
Rule 23    var -> type_aux ID n_var_name var_aux SEMICOLON
Rule 24    var -> type_aux ID n_var_name SEMICOLON
Rule 25    type_aux -> GLOBAL type
Rule 26    type_aux -> type
Rule 27    var_aux -> COMMA ID array_dim var_aux
Rule 28    var_aux -> COMMA ID array_dim
Rule 29    var_aux -> COMMA ID var_aux
Rule 30    var_aux -> COMMA ID
Rule 31    statement -> statement_aux SEMICOLON
Rule 32    statement -> statement_aux_2
Rule 33    statement_aux -> assignment
Rule 34    statement_aux -> function_call
Rule 35    statement_aux -> return
Rule 36    statement_aux -> print
Rule 37    statement_aux_2 -> if
Rule 38    statement_aux_2 -> while
Rule 39    type -> INT
Rule 40    type -> FLOAT
Rule 41    type -> STRING
Rule 42    array_index -> L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
Rule 43    array_index -> L_SQUARE_BRACKET expression R_SQUARE_BRACKET
Rule 44    array_dim -> L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
Rule 45    array_dim -> L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
Rule 46    assignment -> ID array_index ASSIGN expression
Rule 47    assignment -> ID array_index ASSIGN read
Rule 48    assignment -> ID ASSIGN expression
Rule 49    assignment -> ID ASSIGN read
Rule 50    function_call -> ID params_pass
Rule 51    return -> RETURN expression
Rule 52    if -> IF L_PARENS expression R_PARENS block elif else
Rule 53    if -> IF L_PARENS expression R_PARENS block elif
Rule 54    if -> IF L_PARENS expression R_PARENS block else
Rule 55    if -> IF L_PARENS expression R_PARENS block
Rule 56    elif -> ELIF L_PARENS expression R_PARENS block elif
Rule 57    elif -> ELIF L_PARENS expression R_PARENS block
Rule 58    else -> ELSE block
Rule 59    while -> WHILE L_PARENS expression R_PARENS block
Rule 60    print -> PRINT L_PARENS print_aux R_PARENS
Rule 61    print -> PRINT L_PARENS R_PARENS
Rule 62    print_aux -> CONST_STRING COMMA print_aux
Rule 63    print_aux -> CONST_STRING
Rule 64    print_aux -> ID COMMA print_aux
Rule 65    print_aux -> ID
Rule 66    expression -> exp n_eval_exp AND n_add_operator expression
Rule 67    expression -> exp n_eval_exp
Rule 68    read -> READ ID
Rule 69    params_pass -> L_PARENS expression params_pass_aux R_PARENS
Rule 70    params_pass -> L_PARENS expression R_PARENS
Rule 71    params_pass -> L_PARENS R_PARENS
Rule 72    params_pass_aux -> COMMA expression params_pass_aux
Rule 73    params_pass_aux -> COMMA expression
Rule 74    block -> L_KEY_BRACKET statements R_KEY_BRACKET
Rule 75    exp -> xp n_eval_xp OR n_add_operator exp
Rule 76    exp -> xp n_eval_xp
Rule 77    xp -> x n_eval_x log_op n_add_operator x
Rule 78    xp -> x n_eval_x
Rule 79    x -> term n_eval_term x_aux
Rule 80    x -> term n_eval_term
Rule 81    x_aux -> PLUS n_add_operator term x_aux
Rule 82    x_aux -> PLUS n_add_operator term
Rule 83    x_aux -> MINUS n_add_operator term x_aux
Rule 84    x_aux -> MINUS n_add_operator term
Rule 85    log_op -> NOT_EQUAL
Rule 86    log_op -> EQUALS
Rule 87    log_op -> GREATER
Rule 88    log_op -> GREATER_EQ
Rule 89    log_op -> LESS
Rule 90    log_op -> LESS_EQ
Rule 91    term -> factor n_eval_factor term_aux
Rule 92    term -> factor n_eval_factor
Rule 93    term_aux -> TIMES n_add_operator factor term_aux
Rule 94    term_aux -> TIMES n_add_operator factor
Rule 95    term_aux -> DIVIDE n_add_operator factor term_aux
Rule 96    term_aux -> DIVIDE n_add_operator factor
Rule 97    factor -> NOT factor_aux
Rule 98    factor -> factor_aux
Rule 99    factor_aux -> L_PARENS expression R_PARENS
Rule 100   factor_aux -> PLUS const
Rule 101   factor_aux -> MINUS const
Rule 102   factor_aux -> const
Rule 103   const -> ID n_add_operand
Rule 104   const -> CONST_I n_add_operand
Rule 105   const -> CONST_F n_add_operand
Rule 106   const -> CONST_STRING n_add_operand
Rule 107   const -> function_call
Rule 108   const -> array_access
Rule 109   array_access -> ID array_index
Rule 110   n_var_name -> <empty>
Rule 111   n_eval_exp -> <empty>
Rule 112   n_eval_xp -> <empty>
Rule 113   n_eval_x -> <empty>
Rule 114   n_eval_factor -> <empty>
Rule 115   n_eval_term -> <empty>
Rule 116   n_add_operand -> <empty>
Rule 117   n_add_operator -> <empty>

Terminals, with rules where they appear

AND                  : 66
ASSIGN               : 46 47 48 49
COLON                : 7 8
COMMA                : 15 17 27 28 29 30 62 64 72 73
CONST_F              : 105
CONST_I              : 44 44 45 104
CONST_STRING         : 62 63 106
DIVIDE               : 95 96
ELIF                 : 56 57
ELSE                 : 58
EQUALS               : 86
FLOAT                : 40
FUNCTION             : 6 7 8
GLOBAL               : 25
GREATER              : 87
GREATER_EQ           : 88
ID                   : 7 8 15 16 17 18 21 22 23 24 27 28 29 30 46 47 48 49 50 64 65 68 103 109
IF                   : 52 53 54 55
INT                  : 39
LESS                 : 89
LESS_EQ              : 90
L_KEY_BRACKET        : 9 10 74
L_PARENS             : 7 8 52 53 54 55 56 57 59 60 61 69 70 71 99
L_SQUARE_BRACKET     : 42 42 43 44 44 45
MAIN                 : 6
MINUS                : 83 84 101
NOT                  : 97
NOT_EQUAL            : 85
OR                   : 75
PLUS                 : 81 82 100
PRINT                : 60 61
READ                 : 68
RETURN               : 51
R_KEY_BRACKET        : 9 10 74
R_PARENS             : 7 8 52 53 54 55 56 57 59 60 61 69 70 71 99
R_SQUARE_BRACKET     : 42 42 43 44 44 45
SEMICOLON            : 21 22 23 24 31
STRING               : 41
TIMES                : 93 94
VOID                 : 20
WHILE                : 59
error                : 

Nonterminals, with rules where they appear

array_access         : 108
array_dim            : 21 22 27 28
array_index          : 15 16 46 47 109
assignment           : 33
block                : 52 53 54 55 56 57 58 59
const                : 100 101 102
elif                 : 52 53 56
else                 : 52 54
exp                  : 66 67 75
expression           : 42 42 43 46 48 51 52 53 54 55 56 57 59 66 69 70 72 73 99
factor               : 91 92 93 94 95 96
factor_aux           : 97 98
function             : 3 4
function_body        : 5 6
function_body_aux    : 9 11
function_call        : 34 107
function_header      : 5
function_params      : 7 15 17
function_type        : 7 8
if                   : 37
log_op               : 77
main                 : 1 2
n_add_operand        : 103 104 105 106
n_add_operator       : 66 75 77 81 82 83 84 93 94 95 96
n_eval_exp           : 66 67
n_eval_factor        : 91 92
n_eval_term          : 79 80
n_eval_x             : 77 78
n_eval_xp            : 75 76
n_var_name           : 21 22 23 24
params_pass          : 50
params_pass_aux      : 69 72
print                : 36
print_aux            : 60 62 64
program              : 0
program_aux          : 1 3
read                 : 47 49
return               : 35
statement            : 13 14
statement_aux        : 31
statement_aux_2      : 32
statements           : 9 10 13 74
term                 : 79 80 81 82 83 84
term_aux             : 91 93 95
type                 : 15 16 17 18 19 25 26
type_aux             : 21 22 23 24
var                  : 11 12
var_aux              : 21 23 27 29
while                : 38
x                    : 77 77 78
x_aux                : 79 81 83
xp                   : 75 76

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_aux main
    (2) program -> . main
    (3) program_aux -> . program_aux function
    (4) program_aux -> . function
    (6) main -> . FUNCTION MAIN function_body
    (5) function -> . function_header function_body
    (7) function_header -> . FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> . FUNCTION ID L_PARENS R_PARENS COLON function_type

    FUNCTION        shift and go to state 5

    program                        shift and go to state 1
    program_aux                    shift and go to state 2
    main                           shift and go to state 3
    function                       shift and go to state 4
    function_header                shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> program_aux . main
    (3) program_aux -> program_aux . function
    (6) main -> . FUNCTION MAIN function_body
    (5) function -> . function_header function_body
    (7) function_header -> . FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> . FUNCTION ID L_PARENS R_PARENS COLON function_type

    FUNCTION        shift and go to state 5

    main                           shift and go to state 7
    function                       shift and go to state 8
    function_header                shift and go to state 6

state 3

    (2) program -> main .

    $end            reduce using rule 2 (program -> main .)


state 4

    (4) program_aux -> function .

    FUNCTION        reduce using rule 4 (program_aux -> function .)


state 5

    (6) main -> FUNCTION . MAIN function_body
    (7) function_header -> FUNCTION . ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION . ID L_PARENS R_PARENS COLON function_type

    MAIN            shift and go to state 9
    ID              shift and go to state 10


state 6

    (5) function -> function_header . function_body
    (9) function_body -> . L_KEY_BRACKET function_body_aux statements R_KEY_BRACKET
    (10) function_body -> . L_KEY_BRACKET statements R_KEY_BRACKET

    L_KEY_BRACKET   shift and go to state 12

    function_body                  shift and go to state 11

state 7

    (1) program -> program_aux main .

    $end            reduce using rule 1 (program -> program_aux main .)


state 8

    (3) program_aux -> program_aux function .

    FUNCTION        reduce using rule 3 (program_aux -> program_aux function .)


state 9

    (6) main -> FUNCTION MAIN . function_body
    (9) function_body -> . L_KEY_BRACKET function_body_aux statements R_KEY_BRACKET
    (10) function_body -> . L_KEY_BRACKET statements R_KEY_BRACKET

    L_KEY_BRACKET   shift and go to state 12

    function_body                  shift and go to state 13

state 10

    (7) function_header -> FUNCTION ID . L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION ID . L_PARENS R_PARENS COLON function_type

    L_PARENS        shift and go to state 14


state 11

    (5) function -> function_header function_body .

    FUNCTION        reduce using rule 5 (function -> function_header function_body .)


state 12

    (9) function_body -> L_KEY_BRACKET . function_body_aux statements R_KEY_BRACKET
    (10) function_body -> L_KEY_BRACKET . statements R_KEY_BRACKET
    (11) function_body_aux -> . var function_body_aux
    (12) function_body_aux -> . var
    (13) statements -> . statement statements
    (14) statements -> . statement
    (21) var -> . type_aux ID n_var_name array_dim var_aux SEMICOLON
    (22) var -> . type_aux ID n_var_name array_dim SEMICOLON
    (23) var -> . type_aux ID n_var_name var_aux SEMICOLON
    (24) var -> . type_aux ID n_var_name SEMICOLON
    (31) statement -> . statement_aux SEMICOLON
    (32) statement -> . statement_aux_2
    (25) type_aux -> . GLOBAL type
    (26) type_aux -> . type
    (33) statement_aux -> . assignment
    (34) statement_aux -> . function_call
    (35) statement_aux -> . return
    (36) statement_aux -> . print
    (37) statement_aux_2 -> . if
    (38) statement_aux_2 -> . while
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . STRING
    (46) assignment -> . ID array_index ASSIGN expression
    (47) assignment -> . ID array_index ASSIGN read
    (48) assignment -> . ID ASSIGN expression
    (49) assignment -> . ID ASSIGN read
    (50) function_call -> . ID params_pass
    (51) return -> . RETURN expression
    (60) print -> . PRINT L_PARENS print_aux R_PARENS
    (61) print -> . PRINT L_PARENS R_PARENS
    (52) if -> . IF L_PARENS expression R_PARENS block elif else
    (53) if -> . IF L_PARENS expression R_PARENS block elif
    (54) if -> . IF L_PARENS expression R_PARENS block else
    (55) if -> . IF L_PARENS expression R_PARENS block
    (59) while -> . WHILE L_PARENS expression R_PARENS block

    GLOBAL          shift and go to state 23
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 20
    RETURN          shift and go to state 34
    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37

    function_body_aux              shift and go to state 15
    statements                     shift and go to state 16
    var                            shift and go to state 17
    statement                      shift and go to state 18
    type_aux                       shift and go to state 19
    statement_aux                  shift and go to state 21
    statement_aux_2                shift and go to state 22
    type                           shift and go to state 24
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    print                          shift and go to state 28
    if                             shift and go to state 29
    while                          shift and go to state 30

state 13

    (6) main -> FUNCTION MAIN function_body .

    $end            reduce using rule 6 (main -> FUNCTION MAIN function_body .)


state 14

    (7) function_header -> FUNCTION ID L_PARENS . function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION ID L_PARENS . R_PARENS COLON function_type
    (15) function_params -> . type ID array_index COMMA function_params
    (16) function_params -> . type ID array_index
    (17) function_params -> . type ID COMMA function_params
    (18) function_params -> . type ID
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . STRING

    R_PARENS        shift and go to state 39
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33

    function_params                shift and go to state 38
    type                           shift and go to state 40

state 15

    (9) function_body -> L_KEY_BRACKET function_body_aux . statements R_KEY_BRACKET
    (13) statements -> . statement statements
    (14) statements -> . statement
    (31) statement -> . statement_aux SEMICOLON
    (32) statement -> . statement_aux_2
    (33) statement_aux -> . assignment
    (34) statement_aux -> . function_call
    (35) statement_aux -> . return
    (36) statement_aux -> . print
    (37) statement_aux_2 -> . if
    (38) statement_aux_2 -> . while
    (46) assignment -> . ID array_index ASSIGN expression
    (47) assignment -> . ID array_index ASSIGN read
    (48) assignment -> . ID ASSIGN expression
    (49) assignment -> . ID ASSIGN read
    (50) function_call -> . ID params_pass
    (51) return -> . RETURN expression
    (60) print -> . PRINT L_PARENS print_aux R_PARENS
    (61) print -> . PRINT L_PARENS R_PARENS
    (52) if -> . IF L_PARENS expression R_PARENS block elif else
    (53) if -> . IF L_PARENS expression R_PARENS block elif
    (54) if -> . IF L_PARENS expression R_PARENS block else
    (55) if -> . IF L_PARENS expression R_PARENS block
    (59) while -> . WHILE L_PARENS expression R_PARENS block

    ID              shift and go to state 20
    RETURN          shift and go to state 34
    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37

    statements                     shift and go to state 41
    statement                      shift and go to state 18
    statement_aux                  shift and go to state 21
    statement_aux_2                shift and go to state 22
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    print                          shift and go to state 28
    if                             shift and go to state 29
    while                          shift and go to state 30

state 16

    (10) function_body -> L_KEY_BRACKET statements . R_KEY_BRACKET

    R_KEY_BRACKET   shift and go to state 42


state 17

    (11) function_body_aux -> var . function_body_aux
    (12) function_body_aux -> var .
    (11) function_body_aux -> . var function_body_aux
    (12) function_body_aux -> . var
    (21) var -> . type_aux ID n_var_name array_dim var_aux SEMICOLON
    (22) var -> . type_aux ID n_var_name array_dim SEMICOLON
    (23) var -> . type_aux ID n_var_name var_aux SEMICOLON
    (24) var -> . type_aux ID n_var_name SEMICOLON
    (25) type_aux -> . GLOBAL type
    (26) type_aux -> . type
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . STRING

    ID              reduce using rule 12 (function_body_aux -> var .)
    RETURN          reduce using rule 12 (function_body_aux -> var .)
    PRINT           reduce using rule 12 (function_body_aux -> var .)
    IF              reduce using rule 12 (function_body_aux -> var .)
    WHILE           reduce using rule 12 (function_body_aux -> var .)
    GLOBAL          shift and go to state 23
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33

    var                            shift and go to state 17
    function_body_aux              shift and go to state 43
    type_aux                       shift and go to state 19
    type                           shift and go to state 24

state 18

    (13) statements -> statement . statements
    (14) statements -> statement .
    (13) statements -> . statement statements
    (14) statements -> . statement
    (31) statement -> . statement_aux SEMICOLON
    (32) statement -> . statement_aux_2
    (33) statement_aux -> . assignment
    (34) statement_aux -> . function_call
    (35) statement_aux -> . return
    (36) statement_aux -> . print
    (37) statement_aux_2 -> . if
    (38) statement_aux_2 -> . while
    (46) assignment -> . ID array_index ASSIGN expression
    (47) assignment -> . ID array_index ASSIGN read
    (48) assignment -> . ID ASSIGN expression
    (49) assignment -> . ID ASSIGN read
    (50) function_call -> . ID params_pass
    (51) return -> . RETURN expression
    (60) print -> . PRINT L_PARENS print_aux R_PARENS
    (61) print -> . PRINT L_PARENS R_PARENS
    (52) if -> . IF L_PARENS expression R_PARENS block elif else
    (53) if -> . IF L_PARENS expression R_PARENS block elif
    (54) if -> . IF L_PARENS expression R_PARENS block else
    (55) if -> . IF L_PARENS expression R_PARENS block
    (59) while -> . WHILE L_PARENS expression R_PARENS block

    R_KEY_BRACKET   reduce using rule 14 (statements -> statement .)
    ID              shift and go to state 20
    RETURN          shift and go to state 34
    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37

    statement                      shift and go to state 18
    statements                     shift and go to state 44
    statement_aux                  shift and go to state 21
    statement_aux_2                shift and go to state 22
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    print                          shift and go to state 28
    if                             shift and go to state 29
    while                          shift and go to state 30

state 19

    (21) var -> type_aux . ID n_var_name array_dim var_aux SEMICOLON
    (22) var -> type_aux . ID n_var_name array_dim SEMICOLON
    (23) var -> type_aux . ID n_var_name var_aux SEMICOLON
    (24) var -> type_aux . ID n_var_name SEMICOLON

    ID              shift and go to state 45


state 20

    (46) assignment -> ID . array_index ASSIGN expression
    (47) assignment -> ID . array_index ASSIGN read
    (48) assignment -> ID . ASSIGN expression
    (49) assignment -> ID . ASSIGN read
    (50) function_call -> ID . params_pass
    (42) array_index -> . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (43) array_index -> . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (69) params_pass -> . L_PARENS expression params_pass_aux R_PARENS
    (70) params_pass -> . L_PARENS expression R_PARENS
    (71) params_pass -> . L_PARENS R_PARENS

    ASSIGN          shift and go to state 47
    L_SQUARE_BRACKET shift and go to state 49
    L_PARENS        shift and go to state 50

    array_index                    shift and go to state 46
    params_pass                    shift and go to state 48

state 21

    (31) statement -> statement_aux . SEMICOLON

    SEMICOLON       shift and go to state 51


state 22

    (32) statement -> statement_aux_2 .

    ID              reduce using rule 32 (statement -> statement_aux_2 .)
    RETURN          reduce using rule 32 (statement -> statement_aux_2 .)
    PRINT           reduce using rule 32 (statement -> statement_aux_2 .)
    IF              reduce using rule 32 (statement -> statement_aux_2 .)
    WHILE           reduce using rule 32 (statement -> statement_aux_2 .)
    R_KEY_BRACKET   reduce using rule 32 (statement -> statement_aux_2 .)


state 23

    (25) type_aux -> GLOBAL . type
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . STRING

    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    STRING          shift and go to state 33

    type                           shift and go to state 52

state 24

    (26) type_aux -> type .

    ID              reduce using rule 26 (type_aux -> type .)


state 25

    (33) statement_aux -> assignment .

    SEMICOLON       reduce using rule 33 (statement_aux -> assignment .)


state 26

    (34) statement_aux -> function_call .

    SEMICOLON       reduce using rule 34 (statement_aux -> function_call .)


state 27

    (35) statement_aux -> return .

    SEMICOLON       reduce using rule 35 (statement_aux -> return .)


state 28

    (36) statement_aux -> print .

    SEMICOLON       reduce using rule 36 (statement_aux -> print .)


state 29

    (37) statement_aux_2 -> if .

    ID              reduce using rule 37 (statement_aux_2 -> if .)
    RETURN          reduce using rule 37 (statement_aux_2 -> if .)
    PRINT           reduce using rule 37 (statement_aux_2 -> if .)
    IF              reduce using rule 37 (statement_aux_2 -> if .)
    WHILE           reduce using rule 37 (statement_aux_2 -> if .)
    R_KEY_BRACKET   reduce using rule 37 (statement_aux_2 -> if .)


state 30

    (38) statement_aux_2 -> while .

    ID              reduce using rule 38 (statement_aux_2 -> while .)
    RETURN          reduce using rule 38 (statement_aux_2 -> while .)
    PRINT           reduce using rule 38 (statement_aux_2 -> while .)
    IF              reduce using rule 38 (statement_aux_2 -> while .)
    WHILE           reduce using rule 38 (statement_aux_2 -> while .)
    R_KEY_BRACKET   reduce using rule 38 (statement_aux_2 -> while .)


state 31

    (39) type -> INT .

    ID              reduce using rule 39 (type -> INT .)
    L_KEY_BRACKET   reduce using rule 39 (type -> INT .)


state 32

    (40) type -> FLOAT .

    ID              reduce using rule 40 (type -> FLOAT .)
    L_KEY_BRACKET   reduce using rule 40 (type -> FLOAT .)


state 33

    (41) type -> STRING .

    ID              reduce using rule 41 (type -> STRING .)
    L_KEY_BRACKET   reduce using rule 41 (type -> STRING .)


state 34

    (51) return -> RETURN . expression
    (66) expression -> . exp n_eval_exp AND n_add_operator expression
    (67) expression -> . exp n_eval_exp
    (75) exp -> . xp n_eval_xp OR n_add_operator exp
    (76) exp -> . xp n_eval_xp
    (77) xp -> . x n_eval_x log_op n_add_operator x
    (78) xp -> . x n_eval_x
    (79) x -> . term n_eval_term x_aux
    (80) x -> . term n_eval_term
    (91) term -> . factor n_eval_factor term_aux
    (92) term -> . factor n_eval_factor
    (97) factor -> . NOT factor_aux
    (98) factor -> . factor_aux
    (99) factor_aux -> . L_PARENS expression R_PARENS
    (100) factor_aux -> . PLUS const
    (101) factor_aux -> . MINUS const
    (102) factor_aux -> . const
    (103) const -> . ID n_add_operand
    (104) const -> . CONST_I n_add_operand
    (105) const -> . CONST_F n_add_operand
    (106) const -> . CONST_STRING n_add_operand
    (107) const -> . function_call
    (108) const -> . array_access
    (50) function_call -> . ID params_pass
    (109) array_access -> . ID array_index

    NOT             shift and go to state 59
    L_PARENS        shift and go to state 61
    PLUS            shift and go to state 62
    MINUS           shift and go to state 64
    ID              shift and go to state 65
    CONST_I         shift and go to state 66
    CONST_F         shift and go to state 67
    CONST_STRING    shift and go to state 68

    expression                     shift and go to state 53
    exp                            shift and go to state 54
    xp                             shift and go to state 55
    x                              shift and go to state 56
    term                           shift and go to state 57
    factor                         shift and go to state 58
    factor_aux                     shift and go to state 60
    const                          shift and go to state 63
    function_call                  shift and go to state 69
    array_access                   shift and go to state 70

state 35

    (60) print -> PRINT . L_PARENS print_aux R_PARENS
    (61) print -> PRINT . L_PARENS R_PARENS

    L_PARENS        shift and go to state 71


state 36

    (52) if -> IF . L_PARENS expression R_PARENS block elif else
    (53) if -> IF . L_PARENS expression R_PARENS block elif
    (54) if -> IF . L_PARENS expression R_PARENS block else
    (55) if -> IF . L_PARENS expression R_PARENS block

    L_PARENS        shift and go to state 72


state 37

    (59) while -> WHILE . L_PARENS expression R_PARENS block

    L_PARENS        shift and go to state 73


state 38

    (7) function_header -> FUNCTION ID L_PARENS function_params . R_PARENS COLON function_type

    R_PARENS        shift and go to state 74


state 39

    (8) function_header -> FUNCTION ID L_PARENS R_PARENS . COLON function_type

    COLON           shift and go to state 75


state 40

    (15) function_params -> type . ID array_index COMMA function_params
    (16) function_params -> type . ID array_index
    (17) function_params -> type . ID COMMA function_params
    (18) function_params -> type . ID

    ID              shift and go to state 76


state 41

    (9) function_body -> L_KEY_BRACKET function_body_aux statements . R_KEY_BRACKET

    R_KEY_BRACKET   shift and go to state 77


state 42

    (10) function_body -> L_KEY_BRACKET statements R_KEY_BRACKET .

    FUNCTION        reduce using rule 10 (function_body -> L_KEY_BRACKET statements R_KEY_BRACKET .)
    $end            reduce using rule 10 (function_body -> L_KEY_BRACKET statements R_KEY_BRACKET .)


state 43

    (11) function_body_aux -> var function_body_aux .

    ID              reduce using rule 11 (function_body_aux -> var function_body_aux .)
    RETURN          reduce using rule 11 (function_body_aux -> var function_body_aux .)
    PRINT           reduce using rule 11 (function_body_aux -> var function_body_aux .)
    IF              reduce using rule 11 (function_body_aux -> var function_body_aux .)
    WHILE           reduce using rule 11 (function_body_aux -> var function_body_aux .)


state 44

    (13) statements -> statement statements .

    R_KEY_BRACKET   reduce using rule 13 (statements -> statement statements .)


state 45

    (21) var -> type_aux ID . n_var_name array_dim var_aux SEMICOLON
    (22) var -> type_aux ID . n_var_name array_dim SEMICOLON
    (23) var -> type_aux ID . n_var_name var_aux SEMICOLON
    (24) var -> type_aux ID . n_var_name SEMICOLON
    (110) n_var_name -> .

    SEMICOLON       reduce using rule 110 (n_var_name -> .)
    L_SQUARE_BRACKET reduce using rule 110 (n_var_name -> .)
    COMMA           reduce using rule 110 (n_var_name -> .)

    n_var_name                     shift and go to state 78

state 46

    (46) assignment -> ID array_index . ASSIGN expression
    (47) assignment -> ID array_index . ASSIGN read

    ASSIGN          shift and go to state 79


state 47

    (48) assignment -> ID ASSIGN . expression
    (49) assignment -> ID ASSIGN . read
    (66) expression -> . exp n_eval_exp AND n_add_operator expression
    (67) expression -> . exp n_eval_exp
    (68) read -> . READ ID
    (75) exp -> . xp n_eval_xp OR n_add_operator exp
    (76) exp -> . xp n_eval_xp
    (77) xp -> . x n_eval_x log_op n_add_operator x
    (78) xp -> . x n_eval_x
    (79) x -> . term n_eval_term x_aux
    (80) x -> . term n_eval_term
    (91) term -> . factor n_eval_factor term_aux
    (92) term -> . factor n_eval_factor
    (97) factor -> . NOT factor_aux
    (98) factor -> . factor_aux
    (99) factor_aux -> . L_PARENS expression R_PARENS
    (100) factor_aux -> . PLUS const
    (101) factor_aux -> . MINUS const
    (102) factor_aux -> . const
    (103) const -> . ID n_add_operand
    (104) const -> . CONST_I n_add_operand
    (105) const -> . CONST_F n_add_operand
    (106) const -> . CONST_STRING n_add_operand
    (107) const -> . function_call
    (108) const -> . array_access
    (50) function_call -> . ID params_pass
    (109) array_access -> . ID array_index

    READ            shift and go to state 82
    NOT             shift and go to state 59
    L_PARENS        shift and go to state 61
    PLUS            shift and go to state 62
    MINUS           shift and go to state 64
    ID              shift and go to state 65
    CONST_I         shift and go to state 66
    CONST_F         shift and go to state 67
    CONST_STRING    shift and go to state 68

    expression                     shift and go to state 80
    read                           shift and go to state 81
    exp                            shift and go to state 54
    xp                             shift and go to state 55
    x                              shift and go to state 56
    term                           shift and go to state 57
    factor                         shift and go to state 58
    factor_aux                     shift and go to state 60
    const                          shift and go to state 63
    function_call                  shift and go to state 69
    array_access                   shift and go to state 70

state 48

    (50) function_call -> ID params_pass .

    SEMICOLON       reduce using rule 50 (function_call -> ID params_pass .)
    TIMES           reduce using rule 50 (function_call -> ID params_pass .)
    DIVIDE          reduce using rule 50 (function_call -> ID params_pass .)
    PLUS            reduce using rule 50 (function_call -> ID params_pass .)
    MINUS           reduce using rule 50 (function_call -> ID params_pass .)
    NOT_EQUAL       reduce using rule 50 (function_call -> ID params_pass .)
    EQUALS          reduce using rule 50 (function_call -> ID params_pass .)
    GREATER         reduce using rule 50 (function_call -> ID params_pass .)
    GREATER_EQ      reduce using rule 50 (function_call -> ID params_pass .)
    LESS            reduce using rule 50 (function_call -> ID params_pass .)
    LESS_EQ         reduce using rule 50 (function_call -> ID params_pass .)
    OR              reduce using rule 50 (function_call -> ID params_pass .)
    AND             reduce using rule 50 (function_call -> ID params_pass .)
    R_SQUARE_BRACKET reduce using rule 50 (function_call -> ID params_pass .)
    R_PARENS        reduce using rule 50 (function_call -> ID params_pass .)
    COMMA           reduce using rule 50 (function_call -> ID params_pass .)


state 49

    (42) array_index -> L_SQUARE_BRACKET . expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (43) array_index -> L_SQUARE_BRACKET . expression R_SQUARE_BRACKET
    (66) expression -> . exp n_eval_exp AND n_add_operator expression
    (67) expression -> . exp n_eval_exp
    (75) exp -> . xp n_eval_xp OR n_add_operator exp
    (76) exp -> . xp n_eval_xp
    (77) xp -> . x n_eval_x log_op n_add_operator x
    (78) xp -> . x n_eval_x
    (79) x -> . term n_eval_term x_aux
    (80) x -> . term n_eval_term
    (91) term -> . factor n_eval_factor term_aux
    (92) term -> . factor n_eval_factor
    (97) factor -> . NOT factor_aux
    (98) factor -> . factor_aux
    (99) factor_aux -> . L_PARENS expression R_PARENS
    (100) factor_aux -> . PLUS const
    (101) factor_aux -> . MINUS const
    (102) factor_aux -> . const
    (103) const -> . ID n_add_operand
    (104) const -> . CONST_I n_add_operand
    (105) const -> . CONST_F n_add_operand
    (106) const -> . CONST_STRING n_add_operand
    (107) const -> . function_call
    (108) const -> . array_access
    (50) function_call -> . ID params_pass
    (109) array_access -> . ID array_index

    NOT             shift and go to state 59
    L_PARENS        shift and go to state 61
    PLUS            shift and go to state 62
    MINUS           shift and go to state 64
    ID              shift and go to state 65
    CONST_I         shift and go to state 66
    CONST_F         shift and go to state 67
    CONST_STRING    shift and go to state 68
